# docupilot

./: .env.example  DEMO_VIDEO_SCRIPT.md  IMPLEMENTATION.md  LICENSE  README.md  SUBMISSION_ENTRY.md  cloud_ocr_response.json  pyproject.toml  requirements.txt  setup.py  start_remote.py  test_cloud_ocr.py  test_report.html  verify_ernie.py
data/samples/: rules.yaml
output/court_order_final_test/: report.md
output/court_order_test/: evidence.json
output/final_run/: evidence.json
output/final_run_fixed/: evidence.json  report.md
scripts/: DEMO_SCRIPT.md  generate_dummy_pdf.py
src/: DocuPilot_Home.py  __init__.py  app.py  config.py  main.py  normalize.py  ocr.py  tests.json
src/agents/: analyst.py  base.py  ingestion.py  orchestrator.py  risk.py  summarizer.py  verifier.py
src/agents/prompts/: analyst.txt  ingestion.txt  risk.txt  summarizer.txt  verifier.txt
src/docupilot/: config.py  main.py
src/docupilot/agents/: base.py  compliance.py  financial.py  legal.py  operational.py  reputational.py
src/docupilot/models/: ernie_normalizer.py  llm_adapter.py  ocr_cloud.py  ocr_paddle.py
src/docupilot/pipeline/: report.py  risk_orchestrator.py
src/outputs/contract_sample/: evidence.json  report.md  risk_register.csv
src/outputs/demo_run/: evidence.json  report.md
src/outputs/policy_sample/: evidence.json  report.md  risk_register.csv
src/pages/: QA_Dashboard.py
src/utils/: extraction_rules.py  financial_validator.py  section_finder.py
tests/: test_agents.py  test_ocr.py  test_ui_integration.py  test_utils.py
